# gpu-demo-app

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  app.py  build.sh  k8s-deployment.yaml  main.cpp  mandelbrot.cuh  requirements.txt  run.sh
.github/workflows/: release.yaml
cpp_version/: CMakeLists.txt  Makefile  README.md  main.cpp  mandelbrot.cu
examples/: 01-basic.yaml  02-timeslicing.yaml  03-mps-Volta.yaml  03-mps-preVolta.yaml  03-mps.yaml  04-mig.yaml
